# openrtb2

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: serde.rs
src/: ad_position.rs  api_framework.rs  app.rs  auction_type.rs  audio.rs  banner.rs  banner_ad_type.rs  bid.rs  bid_request.rs  bid_response.rs  companion_type.rs  connection_type.rs  content.rs  content_category.rs  content_context.rs  content_delivery_method.rs  creative_attribute.rs  data.rs  deal.rs  device.rs  device_type.rs  distribution_channel.rs  expandable_direction.rs  feed_type.rs  format.rs  gender.rs  geo.rs  imp.rs  ip_location_service.rs  iqg_media_rating.rs  lib.rs  location_type.rs  loss_reason.rs  max_extended_ad_duration.rs  metric.rs  native.rs  no_bid_reason.rs  playback_cessation_mode.rs  playback_method.rs  pmp.rs  (+16 more)
tests/: bid_request.rs  bid_response.rs
tests/json/: 6.3.1_simple_banner.json  6.3.2_expandable_creative.json  6.3.3_mobile.json  6.3.4_video.json  6.3.5_pmp_with_direct_deal.json  6.3.6_native_ad.json  6.4.1_ad_served_on_win_notice.json  6.4.2_vast_xml_document_returned_inline.json  6.4.3_direct_deal_ad_served_on_win_notice.json  6.4.4_native_markup_returned_inline.json
