[package]
name = "openrtb2"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
default-ext = { path = "../default-ext", version = "0.1" }
json-ext = { path = "../json-ext", version = "0.1" }
