[package]
name = "openrtb2"
version = "0.2.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An implementation of OpenRTB 2.5 FINAL."
repository = "https://github.com/mechiru/openrtb2"
documentation = "https://docs.rs/openrtb2"
categories = ["api-bindings"]
keywords = ["iab", "openrtb"]
readme = "README.md"

[dev-dependencies]
serde_json = { version = "1.0" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_json = { version = "1.0" }
default-ext = { version = "0.1" }
